# african-football-pipeline

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
airflow/: Dockerfile  docker-compose.yaml
airflow/dags/: scrape_leagues.py  test_scrape.py
airflow/plugins/: pipeline_tasks.py
config/: leagues.yaml
config/canonical_teams/: nigeria_npfl.yaml
src/: config_loader.py  models.py  url_builder.py
src/african_football/config/: config_loader.py  leagues.yaml
src/african_football/models/: season_model.py
src/african_football/scraping/: scraper.py  season_discoverer.py  url_builder.py
src/african_football/utils/: file_saver.py  logger.py  team_normalizer.py
src/african_football_leagues_pipeline.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: conftest.py  helpers.py
tests/integration/: test_integration.py
tests/unit/: test_config_loader.py  test_file_saver.py  test_main.py  test_season_discoverer.py  test_season_model.py  test_team_normalizer.py  test_url_builder.py
tools/: extract_teams.py  format_matches.py  merge_teams.py  shared.py
utils/: file_saver.py  logger.py
